# tetris_v2

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/: README.md
tests/: test_activation_functions.py  test_environment.py  test_linear_agent.py  test_nn_agent.py
tetris/: config.yaml  project_root_path.py  showcase_agent_play.py  utils.py
tetris/agent/: _base_classes.py  activation_functions.py  agent.py  population.py
tetris/environment/: _constants.py  environment.py
tetris/training/: best_linear_agent.npy  train.py  train_config.yaml
