[tool.poetry]
name = "Project Name"
version = "0.1.0"
description = "Project description"
authors = ["chingismaksimov <chingis@ualberta.ca>"]
packages = [
    {include = "tetris"}
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
pygame = "^2.1.2"
pathlib = "^1.0.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
pytest = "^7.2.1"
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "tetris"

[tool.black]
line-length = 120